5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1596_2049.log
== TEST (2019-03-26 18:53:59) 
-- CODE:
dividendo=5
divisor=2
resto= (dividendo//divisor)


-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:54:03) 
-- CODE:
dividendo=5
divisor=2
resto= (dividendo//divisor)


-- EXECUTION TIME:
0.152644
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:

-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:

-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:54:07) 
-- CODE:
dividendo=5
divisor=2
resto= (dividendo//divisor)


-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 07:57:11) 
-- CODE:
dividendo=10
divisor=2
resto= (dividendo%divisor)
quociente= dividendo//divsor


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quociente= dividendo//divsor
NameError: name 'divsor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 07:57:25) 
-- CODE:
dividendo=10
divisor=2
resto= (dividendo%divisor)
quociente= dividendo//divisor


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    quociente= dividendo//divsor
NameError: name 'divsor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:07:04) 
-- CODE:
num=int(input())
num2=int(input())
print (num)
print(num2)
quociente=num//num2
resto=num%num2
print(quociente)
print(resto)


-- EXECUTION TIME:
0.13188
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
